<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8988A"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csed.calculatorapp.Calc$PlaceholderFragment" >

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/text_view_hieght"
        android:layout_gravity="right"
        android:background="#aa66cc"
        android:gravity="right"
        android:textSize="40dp" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <Button
        android:id="@+id/clear"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/rows_padding"
        android:text="@string/clear"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/rows_padding" >

        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textSize="35dp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="35dp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textSize="35dp" />

        <Button
            android:id="@+id/div"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/rows_padding" >

        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="35dp" />

        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="35dp" />

        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="35dp" />

        <Button
            android:id="@+id/multi"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/rows_padding" >

        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="35dp" />

        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="35dp" />

        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="35dp" />

        <Button
            android:id="@+id/sub"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textSize="35dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/rows_padding" >

        <Button
            android:id="@+id/dot"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="35dp" />

        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="35dp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textSize="35dp" />

        <Button
            android:id="@+id/add"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="35dp" />
    </LinearLayout>

</LinearLayout>